# claude-video

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: claude-video-analyst.md  claude-video-encoder.md  claude-video-producer.md
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  TROUBLESHOOTING.md
hooks/: hooks.json  preflight-check.sh  validate-skillmd.py
promo-pipeline/: package.json  scene-config.example.yaml  tsconfig.json
promo-pipeline/references/: promo-quality-checklist.md
promo-pipeline/scripts/: analyze_contrast.py  audio_prepare.py  (+3 more)
references/: analyze.md  audio-enhance.md  audio.md  batch-processing.md  captions.md  export-presets.md  filters.md  gpu-accel.md  image-generation.md  remotion.md  shorts-pipeline.md  transcode.md  video-enhance.md  video-generation.md  web-capture.md
scripts/: audio_enhance.py  caption_pipeline.sh  check_deps.sh  detect_gpu.sh  estimate_size.sh  face_tracker.py  frame_analyzer.py  image_generate.py  preflight.sh  scene_planner.py  screen_shorts_pipeline.sh  segment_scorer.py  setup.sh  shorts_pipeline.sh  smart_reframe.py  topic_segmenter.py  video_enhance.py  video_generate.py  web_capture.py
(+25 files in other folders)
