[project]
name = "claude-video"
version = "1.1.1"
description = "AI-powered video production suite for Claude Code"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/AgriciDaniel/claude-video"
Repository = "https://github.com/AgriciDaniel/claude-video"
Issues = "https://github.com/AgriciDaniel/claude-video/issues"
